# iiab

./: .gitignore  PORTS.md  README.md  runrole  update_frappe_forks.sh  update_rapidpro_binaries.sh
.agents/workflows/: sync-upstream-rebuild.md
.antigravitycli/: b4ebed5e-0eae-4916-b2a8-8c9e18ad123f.json
roles/0-init/tasks/: disallow_install_false_with_enabled_true.yml  disallow_install_false_with_installed_defined.yml  validate_enabled_vars_boolean.yml  validate_enabled_vars_defined.yml  validate_install_vars_boolean.yml  validate_install_vars_defined.yml
roles/3-base-server/tasks/: main.yml
roles/ai-gateway/: README.md
roles/ai-gateway/files/: SOUL.md  (+5 more)
roles/ai-update/: README.md
roles/bagisto/: README.md
roles/email-bridge/: README.md
roles/email-bridge/files/: create_email_channel.py  email_bridge.py  notify-failure  notify-failure@.service  pyproject.toml
roles/erpnext/: README.md
roles/litellm/: README.md
roles/openclaw/: README.md
roles/organized/: README.rst
roles/proot_services/: README.md
roles/rapidpro/: RAPIDPRO_TECHNICAL_EVOLUTION.md  README.md  README.rst  REPORT.md  nanorp_design.md
roles/rivebot/: README.md
roles/siyuan/: README.md
roles/social-code/: README.rst
roles/ssl/: README.md
roles/visual/: README.md
scripts/: ansible  gen_ports_md.py  iiab-diagnostics  install-release-binary.sh  local_facts.fact
vars/: default_vars.yml  local_vars_android.yml  local_vars_deldesir.yml  local_vars_large.yml  local_vars_maps_test.yml  local_vars_medium.yml  local_vars_small.yml  local_vars_tiny.yml  local_vars_unittest.yml
(+331 files in other folders)
