[project]
name = "email-bridge"
version = "0.1.0"
description = "Email <-> RapidPro External-channel bridge (SMTP send + IMAP poll)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[tool.setuptools]
py-modules = ["email_bridge"]
